benchmark progress, Escape / Focus action progress, user metadata ref for TargetSpec, cleanup progress

--- a/kzen-auto-jvm/src/main/resources/notation/auto-common/common-action.yaml
+++ b/kzen-auto-jvm/src/main/resources/notation/auto-common/common-action.yaml
@@ -2,6 +2,11 @@
 TargetSpec:
   abstract: true
   class: tech.kzen.auto.common.objects.document.feature.TargetSpec
+  meta:
+    ref:
+      by: TargetSpecDefiner
+      creator: TargetSpecCreator
+      editor: TargetSpecEditor
 
 TargetSpecCreator:
   class: tech.kzen.auto.common.objects.document.feature.TargetSpecCreator
