--- a/kzen-auto-jvm/src/main/resources/notation/auto-js/document/script.yaml
+++ b/kzen-auto-jvm/src/main/resources/notation/auto-js/document/script.yaml
@@ -217,3 +217,10 @@ VisualSubmitTool:
   is: RibbonTool
   parent: BrowserGroup
   delegate: VisualFormSubmit
+
+
+SendEscapeTool:
+  is: RibbonTool
+  parent: BrowserGroup
+  delegate: SendEscape
+
