--- a/gradle.properties
+++ b/gradle.properties
@@ -1,32 +1,32 @@
 # TODO: upgrade to Java 13 language level (Java 13 runtime is already used for screenshots to work properly on Ubuntu)
 javaVersion=11
 
-kotlinVersion=1.3.50
-nodeVersion=12.10.0
+kotlinVersion=1.3.60
+nodeVersion=13.2.0
 nodePluginVersion=1.3.1
 
 
-#kzenLibVersion=0.10.1
-kzenLibVersion=0.11.0-SNAPSHOT
+kzenLibVersion=0.11.0
+#kzenLibVersion=0.11.0-SNAPSHOT
 
 
-kotlinxIoVersion=0.1.14
+kotlinxIoVersion=0.1.16
 guavaVersion=28.1-jre
 dexxVersion=0.7
 
 seleniumVersion=3.141.59
 commonsCompressVersion=1.19
 
-kotlinxCoroutinesCoreVersion=1.3.1
+kotlinxCoroutinesCoreVersion=1.3.2
 
 kotlinxHtmlVersion=0.6.12
 
-#reactVersion=16.6.0-pre.77-kotlin-1.3.41
-#reactDomVersion=16.6.0-pre.77-kotlin-1.3.41
-#kotlinStyledVersion=1.0.0-pre.77-kotlin-1.3.41
-reactVersion=16.9.0-pre.83-kotlin-1.3.50
-reactDomVersion=16.9.0-pre.83-kotlin-1.3.50
-kotlinStyledVersion=1.0.0-pre.83-kotlin-1.3.50
+#reactVersion=16.9.0-pre.83-kotlin-1.3.50
+#reactDomVersion=16.9.0-pre.83-kotlin-1.3.50
+#kotlinStyledVersion=1.0.0-pre.83-kotlin-1.3.50
+reactVersion=16.9.0-pre.88-kotlin-1.3.60
+reactDomVersion=16.9.0-pre.88-kotlin-1.3.60
+kotlinStyledVersion=1.0.0-pre.88-kotlin-1.3.60
 
 # https://github.com/srs/gradle-node-plugin/issues/143
 org.gradle.daemon=false
