--- a/kzen-auto-jvm/build.gradle
+++ b/kzen-auto-jvm/build.gradle
@@ -1,6 +1,9 @@
 buildscript {
     ext {
-        springBootVersion = '2.2.1.RELEASE'
+        // TODO: upgrade once bug is fixed:
+        //  https://github.com/spring-projects/spring-framework/issues/23961
+        springBootVersion = '2.2.0.RELEASE'
+//        springBootVersion = '2.2.1.RELEASE'
     }
     repositories {
         mavenCentral()
