--- a/gradle.properties
+++ b/gradle.properties
@@ -6,8 +6,8 @@ nodeVersion=13.2.0
 nodePluginVersion=1.3.1
 
 
-kzenLibVersion=0.11.1
-#kzenLibVersion=0.11.0-SNAPSHOT
+#kzenLibVersion=0.11.1
+kzenLibVersion=0.12.0-SNAPSHOT
 
 
 kotlinxIoVersion=0.1.16
