fizz buzz works in Script

--- a/kzen-auto-jvm/src/main/resources/notation/auto-jvm/script/action-common.yaml
+++ b/kzen-auto-jvm/src/main/resources/notation/auto-jvm/script/action-common.yaml
@@ -110,6 +110,7 @@ ListMapping:
   display: MappingStepDisplay
   steps: []
   meta:
+    selfLocation: SelfLocation
     items:
       is: ObjectLocation
       by: Nominal
