constrain step move up/down for first/last, refactoring

--- a/kzen-auto-jvm/src/main/resources/notation/auto-js/document/script.yaml
+++ b/kzen-auto-jvm/src/main/resources/notation/auto-js/document/script.yaml
@@ -87,6 +87,10 @@ MappingStepDisplay:
   stepControllerHandle: StepControllerHandle
   scriptCommander: ScriptCommander
 
+#MappingItemDisplay:
+#  is: StepDisplay
+#  class: tech.kzen.auto.client.objects.document.script.step.display.control.MappingItemDisplay$Wrapper
+
 
 ################################################################
 
