--- a/kzen-auto-jvm/src/main/resources/notation/auto-jvm/script/action-common.yaml
+++ b/kzen-auto-jvm/src/main/resources/notation/auto-jvm/script/action-common.yaml
@@ -97,6 +97,7 @@ ListItem:
   class: tech.kzen.auto.server.objects.script.control.ListItem
   icon: Share
   title: "Item"
+#  display: MappingItemDisplay
   meta:
     selfLocation: SelfLocation
 
