--- a/gradle.properties
+++ b/gradle.properties
@@ -1,23 +1,23 @@
 # TODO: upgrade to Java 13 language level (Java 13 runtime is already used for screenshots to work properly on Ubuntu)
 javaVersion=11
 
-kotlinVersion=1.3.60
+kotlinVersion=1.3.61
 nodeVersion=13.2.0
 nodePluginVersion=1.3.1
 
 
-#kzenLibVersion=0.11.1
-kzenLibVersion=0.12.0-SNAPSHOT
+kzenLibVersion=0.12.0
+#kzenLibVersion=0.12.0-SNAPSHOT
 
 
 kotlinxIoVersion=0.1.16
-guavaVersion=28.1-jre
+guavaVersion=28.2-jre
 dexxVersion=0.7
 
 seleniumVersion=3.141.59
 commonsCompressVersion=1.19
 
-kotlinxCoroutinesCoreVersion=1.3.2
+kotlinxCoroutinesCoreVersion=1.3.3
 
 kotlinxHtmlVersion=0.6.12
 
