--- a/gradle.properties
+++ b/gradle.properties
@@ -6,8 +6,8 @@ nodeVersion=13.6.0
 nodePluginVersion=1.3.1
 
 
-kzenLibVersion=0.12.3
-#kzenLibVersion=0.12.3-SNAPSHOT
+#kzenLibVersion=0.12.3
+kzenLibVersion=0.13.0-SNAPSHOT
 
 
 kotlinxIoVersion=0.1.16
