refactoring renaming Managers

--- a/kzen-auto-jvm/src/main/resources/notation/auto-jvm/query/dataflow-vertex.yaml
+++ b/kzen-auto-jvm/src/main/resources/notation/auto-jvm/query/dataflow-vertex.yaml
@@ -75,7 +75,7 @@ ReplaceProcessor:
   icon: Forward
   title: "Replace"
   description: "Substitute the input value (which is ignored) with the given replacement"
-  replacement: "Foo"
+  replacement: ""
   meta:
     input:
       is: RequiredInput
