--- a/kzen-auto-jvm/src/main/resources/notation/auto-js/document/script.yaml
+++ b/kzen-auto-jvm/src/main/resources/notation/auto-js/document/script.yaml
@@ -100,6 +100,11 @@ SelectStepEditor:
   class: tech.kzen.auto.client.objects.document.script.step.attribute.SelectStepEditor$Wrapper
 
 
+SelectScriptEditor:
+  is: AttributeEditorWrapper
+  class: tech.kzen.auto.client.objects.document.script.step.attribute.SelectScriptEditor$Wrapper
+
+
 SelectFeatureEditor:
   is: AttributeEditorWrapper
   class: tech.kzen.auto.client.objects.document.script.step.attribute.SelectFeatureEditor$Wrapper
@@ -211,6 +216,12 @@ ListMappingTool:
   is: RibbonTool
   parent: LogicGroup
   delegate: ListMapping
+
+
+InvokeCallTool:
+  is: RibbonTool
+  parent: LogicGroup
+  delegate: InvokeCall
 
 
 #######################################################################################################################
