bugfix screenshot upload, codegen reflection works

--- a/kzen-auto-jvm/src/main/resources/application.properties
+++ b/kzen-auto-jvm/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 #spring.codec.max-in-memory-size=-1
 #spring.servlet.multipart.max-file-size=-1
 #spring.servlet.multipart.max-request-size=-1
+#spring.codec.max-in-memory-size=128MB
