fixed state display, fixed multiple loops, fixed script rename while running, fixed resetExecution REST, fixed DivisibleCheck divisor type, dependency update

--- a/kzen-auto-jvm/src/main/resources/notation/auto-jvm/script/action-common.yaml
+++ b/kzen-auto-jvm/src/main/resources/notation/auto-jvm/script/action-common.yaml
@@ -56,7 +56,7 @@ DivisibleCheck:
       is: ObjectLocation
       by: Nominal
       editor: SelectStepEditor
-    divisor: Int
+    divisor: Double
 
 
 ################################################################
