--- a/gradle.properties
+++ b/gradle.properties
@@ -1,37 +1,5 @@
-# TODO: upgrade to Java 14 language level (Java 13+ runtime is already used for screenshots to work properly on Ubuntu)
-javaVersion=11
-
-# TODO: test error when using 1.3.70, need to upgrade build infrastructure
-#kotlinVersion=1.3.61
-#kotlinVersion=1.3.70
-kotlinVersion=1.3.71
-
-nodeVersion=13.11.0
-nodePluginVersion=1.3.1
-
-
-kzenLibVersion=0.13.0
-#kzenLibVersion=0.13.0-SNAPSHOT
-
-
-kotlinxIoVersion=0.1.16
-guavaVersion=28.2-jre
-dexxVersion=0.7
-
-seleniumVersion=3.141.59
-commonsCompressVersion=1.20
-
-kotlinxCoroutinesCoreVersion=1.3.5
-
-kotlinxHtmlVersion=0.7.1
-
-#reactVersion=16.9.0-pre.88-kotlin-1.3.60
-#reactDomVersion=16.9.0-pre.88-kotlin-1.3.60
-#kotlinStyledVersion=1.0.0-pre.88-kotlin-1.3.60
-reactVersion=16.13.0-pre.94-kotlin-1.3.70
-reactDomVersion=16.13.0-pre.94-kotlin-1.3.70
-kotlinStyledVersion=1.0.0-pre.94-kotlin-1.3.70
-
-# https://github.com/srs/gradle-node-plugin/issues/143
-org.gradle.daemon=false
-
+kotlin.code.style=official
+#org.gradle.debug=true
+kotlin.parallel.tasks.in.project=true
+org.gradle.parallel=true
+org.gradle.warning.mode=all
