Data Filter with column listing and line count

--- a/kzen-auto-jvm/src/main/resources/notation/auto-common/common-document.yaml
+++ b/kzen-auto-jvm/src/main/resources/notation/auto-common/common-document.yaml
@@ -69,5 +69,7 @@ Filter:
   title: "Data Filter"
   icon: FilterList
   directory: true
+  output: work/out.csv
   meta:
-    inputPattern: String
+    input: String
+    output: String
