addd basic ColumnDomain with unique value count

--- a/kzen-auto-jvm/src/main/resources/notation/auto-jvm/filter/filter-jvm.yaml
+++ b/kzen-auto-jvm/src/main/resources/notation/auto-jvm/filter/filter-jvm.yaml
@@ -7,3 +7,7 @@ ColumnListing:
 ApplyFilter:
   class: tech.kzen.auto.server.objects.filter.ApplyFilter
 
+
+ColumnDomain:
+  class: tech.kzen.auto.server.objects.filter.ColumnDomain
+
