multiple input files work

--- a/kzen-auto-jvm/src/main/resources/notation/auto-common/common-document.yaml
+++ b/kzen-auto-jvm/src/main/resources/notation/auto-common/common-document.yaml
@@ -79,7 +79,7 @@ Filter:
   title: "Data Filter"
   icon: FilterList
   input: path/to/input.csv
-  output: work/out.csv
+  output: ../work/out.csv
   criteria: {}
   meta:
     input: String
