--- a/kzen-auto-jvm/src/main/resources/notation/auto-js/document/filter-js.yaml
+++ b/kzen-auto-jvm/src/main/resources/notation/auto-js/document/filter-js.yaml
@@ -4,3 +4,9 @@ FilterController:
   is: DocumentController
   class: tech.kzen.auto.client.objects.document.filter.FilterController$Wrapper
   archetype: Filter
+
+
+ProcessController:
+  is: DocumentController
+  class: tech.kzen.auto.client.objects.document.process.ProcessController$Wrapper
+  archetype: Process
