--- a/kzen-auto-jvm/src/main/resources/notation/auto-js/document/script.yaml
+++ b/kzen-auto-jvm/src/main/resources/notation/auto-js/document/script.yaml
@@ -224,6 +224,12 @@ InvokeCallTool:
   delegate: InvokeCall
 
 
+#InvokeInputTool:
+#  is: RibbonTool
+#  parent: LogicGroup
+#  delegate: InvokeInput
+
+
 #######################################################################################################################
 
 
