real-time Filter preview

--- a/kzen-auto-jvm/src/main/resources/notation/auto-common/common-document.yaml
+++ b/kzen-auto-jvm/src/main/resources/notation/auto-common/common-document.yaml
@@ -75,7 +75,7 @@ Process:
   abstract: true
   is: Document
   class: tech.kzen.auto.server.objects.process.ProcessDocument
-  title: "Data Process"
+  title: "Report"
   icon: TableChart
   input: ./
   filter: {}
