freeze panes for "Row Number", added Save As in Output for Filter and Pivot

--- a/kzen-auto-jvm/src/main/resources/notation/auto-common/common-document.yaml
+++ b/kzen-auto-jvm/src/main/resources/notation/auto-common/common-document.yaml
@@ -83,8 +83,9 @@ Process:
     rows: []
     values: {}
   output:
+    save: ""
     start: 1
-    count: 100
+    count: 50
   meta:
     input: String
     filter: FilterSpec
