added FastTsvLineParser, added output dir setting

--- a/kzen-auto-jvm/src/main/resources/notation/auto-common/common-document.yaml
+++ b/kzen-auto-jvm/src/main/resources/notation/auto-common/common-document.yaml
@@ -85,6 +85,7 @@ Report:
     rows: []
     values: {}
   output:
+    work: "report" # NB: referenced in OutputSpec
     save: ""
     start: 1
     count: 50
