file browser: add and remove selected, filer

--- a/kzen-auto-jvm/src/main/resources/notation/auto-common/common-document.yaml
+++ b/kzen-auto-jvm/src/main/resources/notation/auto-common/common-document.yaml
@@ -79,7 +79,9 @@ Report:
   title: "Report"
   icon: TableChart
   input:
-    directory: ./
+    browser:
+      directory: ./
+      filter: ""
     selected: []
   formula: {}
   filter: {}
